Wrap patrol text in div and pad title to not overlap, render actual icon in first segement, comment out file attachment handling in PatrolModal to prevent NPEs

--- a/src/PatrolList/styles.module.scss
+++ b/src/PatrolList/styles.module.scss
@@ -46,7 +46,19 @@
     h4 {
         font-size: 0.875rem;
         font-weight: 500;
+        padding-left: 2.25rem;
+        padding-right: 2.25rem;
+        align-items: center;
         margin: 0.6875rem 0 0.25rem;
+        cursor: pointer;
+    }
+    svg {
+        height: 1.25rem;
+        width: 2.0rem;
+        fill: gray; 
+        position: absolute;
+        left: 0.375rem;
+        top: 0.5rem;
         cursor: pointer;
     }
     p {
@@ -120,7 +132,7 @@
 }
 
 .addReport {
-    bottom: 0;
+    bottom: 2.25rem;
     pointer-events: none;
     left: 0;
     svg {
@@ -161,3 +173,4 @@
         position: static;
     }
 }
+
